----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-06-22 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Updates.

2005-06-23 Robin Johnson <robbat2@users.sourceforge.net>
    * config.inc.php, libraries/relation.lib.php,
	libraries/get_foreign.lib.php, tbl_select.php, tbl_change.php: Support for
	customizing foreign-key dropdown, take #2, now very customizable, incl max
	item limit.

2005-06-23 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.

2005-06-22 Alexander M. Turek  <me@derrabus.de>
    * tbl_properties_structure.php: Undefined index.

2005-06-22 Robin Johnson <robbat2@users.sourceforge.net>
    * config.inc.php, libraries/relation.lib.php: Support for customizing
	foreign-key dropdown, take #1.

2005-06-22 Garvin Hicking  <rabustoldmethatiforgotmyemailaddress@supergarv.de>
    * server_databases.php: Bug #1225315, wrong message displayed
      when no databases were dropped.
    * tbl_properties.inc.php: Patch #1225452, JS error for
      getting the value of a select field in certain browsers.

2005-06-19 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/chinese_traditional: Updates, thanks to Siu Sun
    * lang/italian: Updates, thanks to Pietro Danesi
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * lang/mongolian update, thanks to Bayarsaikhan Enkhtaivan
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).

2005-06-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 1221602, undefined variable when trying
      to use a reserved word as an identifier
    * db_operations.php, libraries/database_interface.lib.php:
      bug #1221359, Copying a db containing a MERGE table

2005-06-12 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: visually bind the Add x fields dialog to its