@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-06-24 Marc Delisle  <lem9@users.sourceforge.net>
+    * db_operations.php: problem renaming a db
+
 2005-06-22 Alexander M. Turek  <me@derrabus.de>
     * lang/german-*.inc.php: Updates.
 
